# Copyright (c) 2025 The Bitcoin developers
# Distributed under the MIT software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.

[package]
name = "proof-manager-cli"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[[bin]]
name = "proof-manager-cli"
path = "src/main.rs"

[dependencies]
avalanche-lib-wasm = { path = "../../modules/avalanche-lib-wasm" }
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
hex = "0.4"
base64 = "0.21"
bs58 = "0.5"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0" 
