# Copyright (c) 2022 The Bitcoin developers

[package]
name = "chronik-db"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.1"
license = "MIT"

[dependencies]
abc-rust-error = { path = "../abc-rust-error" }
abc-rust-lint = { path = "../abc-rust-lint" }

bitcoinsuite-core = { path = "../bitcoinsuite-core" }

# En-/decode byte strings from/to hex
hex = "0.4"

# Compact and fast serialization
postcard = { version = "1.0", features = ["alloc"] }

# Fast & simple hashing algo
seahash = "4.1"

# Serialize structs
serde = { version = "1.0", features = ["derive"] }

# Derive error enums
thiserror = "1.0"

# Key-value database
# This is currently a git dependency, as this commit to fix the linux-arm build
# hasn't been published yet. TODO: Change it back to version once published.
# See this GitHub issue: https://github.com/rust-rocksdb/rust-rocksdb/pull/754
[dependencies.rocksdb]
git = "https://github.com/rust-rocksdb/rust-rocksdb.git"
rev = "a6103ef"
default-features = false

[dev-dependencies]
# Colorful diffs for assertions
pretty_assertions = "1.0"

# Temporary directory that's deleted when dropped
tempdir = "0.3"

# Simple RNG
fastrand = "1.9"
