# Copyright (c) 2022 The Bitcoin developers

[package]
name = "chronik-db"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "MIT"

[dependencies]
abc-rust-error = { path = "../abc-rust-error" }
abc-rust-lint = { path = "../abc-rust-lint" }

bitcoinsuite-core = { path = "../bitcoinsuite-core" }

chronik-util = { path = "../chronik-util" }

# Efficient byte strings, with ref counted substrings
bytes = "1.4"

# En-/decode byte strings from/to hex
hex = "0.4"

# Compact and fast serialization
postcard = { version = "1.0", features = ["alloc"] }

# Fast & simple hashing algo
seahash = "4.1"

# Serialize structs
serde = { version = "1.0", features = ["derive"] }

# Derive error enums
thiserror = "1.0"

# Key-value database
rocksdb = { version = "0.21", default-features = false }

[dev-dependencies]
# Colorful diffs for assertions
pretty_assertions = "1.0"

# Temporary directory that's deleted when dropped
tempdir = "0.3"

# Simple RNG
fastrand = "2.0"
