# Copyright (c) 2022 The Bitcoin developers

[package]
name = "chronik-lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.61.0"
license = "MIT"

[lib]
# Compile to C-ABI
crate-type = ["staticlib"]

[dependencies]
abc-rust-lint = { path = "../abc-rust-lint" }
abc-rust-error = { path = "../abc-rust-error" }

chronik-bridge = { path = "../chronik-bridge" }
chronik-http = { path = "../chronik-http" }
chronik-util = { path = "../chronik-util" }

# Bridge to C++
cxx = "1.0"

# Derive error enums
thiserror = "1.0"

# Async runtime
tokio = { version = "1.23", features = ["sync", "rt", "rt-multi-thread"] }

[build-dependencies]
# Build scripts for the cxx crate
cxx-build = "1.0"
