# Copyright (c) 2022 The Bitcoin developers

[package]
name = "chronik_lib"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "MIT"

[lib]
# Compile to C-ABI
crate-type = ["staticlib"]

[features]
plugins = ["chronik-plugin/enabled"]

[dependencies]
abc-rust-lint = { path = "../abc-rust-lint" }
abc-rust-error = { path = "../abc-rust-error" }

bitcoinsuite-core = { path = "../bitcoinsuite-core" }

chronik-bridge = { path = "../chronik-bridge" }
chronik-db = { path = "../chronik-db" }
chronik-http = { path = "../chronik-http" }
chronik-indexer = { path = "../chronik-indexer" }
chronik-plugin = { path = "../chronik-plugin" }
chronik-util = { path = "../chronik-util" }

# Bridge to C++
cxx = "1.0"

# Derive error enums
thiserror = "1.0"

# Async runtime
tokio = { version = "1.32", features = ["sync", "rt", "rt-multi-thread"] }

[build-dependencies]
# Build scripts for the cxx crate
cxx-build = "1.0"
