# Copyright (c) 2024 The Bitcoin developers

[package]
name = "chronik-plugin-common"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
abc-rust-lint = { path = "../abc-rust-lint" }

bitcoinsuite-core = { path = "../bitcoinsuite-core" }
bitcoinsuite-slp = { path = "../bitcoinsuite-slp" }

# Map that goes in both directions
bimap = "0.6"

# Serialize structs
serde = { version = "1.0", features = ["derive"] }

# Semantic version string parser
versions = "6.2"
