# Copyright (c) 2024 The Bitcoin developers

[package]
name = "chronik-plugin"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[features]
default = []
enabled = ["chronik-plugin-impl"]

[dependencies]
abc-rust-lint = { path = "../abc-rust-lint" }
abc-rust-error = { path = "../abc-rust-error" }

chronik-plugin-common = { path = "../chronik-plugin-common" }

[dependencies.chronik-plugin-impl]
path = "../chronik-plugin-impl"
optional = true
