# Copyright (c) 2023 The Bitcoin developers

[package]
name = "chronik-proto"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
license = "MIT"

[dependencies]
abc-rust-lint = { path = "../abc-rust-lint" }

# Protobuf en-/decoding
prost = "0.11"

[build-dependencies]
# Build structs for protobuf messages from a *.proto file
prost-build = "0.11"
