# Copyright (c) 2024 The Bitcoin developers
# Distributed under the MIT software license, see the accompanying
# COPYING or http://www.opensource.org/licenses/mit-license.php.

[package]
name = "bitcoinsuite-chronik-client"
version = "0.1.0"
edition = "2021"

[dependencies]
abc-rust-error = { path = "../../chronik/abc-rust-error"}
bitcoinsuite-core = { path = "../../chronik/bitcoinsuite-core" }
chronik-proto = { path = "../../chronik/chronik-proto/"}

# Error structs/enums
thiserror = "1.0"

# HTTP client
reqwest = "0.11"

# Async runtime and scheduler
tokio = { version = "1.14", features = ["full"] }

# Protobuf (de)serialization
prost = "0.11"

# Hex en-/decoding
hex = "0.4"

regex = "1"

bytes = { version = "1.4", features = ["serde"] }

[build-dependencies]
# Build Protobuf structs
prost-build = "0.11"

[dev-dependencies]
# Colorful diffs for assertions
pretty_assertions = "1.0"
