# Copyright (c) 2024 The Bitcoin developers
# Distributed under the MIT software license, see the accompanying
# file COPYING or http://www.opensource.org/licenses/mit-license.php.

[package]
name = "ecash-lib-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.76.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
abc-rust-lint = { path = "../../chronik/abc-rust-lint" }

# Generate bindings from WebAssembly <-> JS
wasm-bindgen = "=0.2.92"

# Derive error structs/enums
thiserror = "2.0.3"

# Implementation of RIPEMD-160 etc. cryptographic hash functions
ripemd = "0.1"

# Implementation of SHA-256 etc. cryptographic hash functions
sha2 = "0.10"

[dependencies.ecash-secp256k1]
# libsecp256k1 with support for BCH/XEC/XPI Schnorr signatures
path = "../ecash-secp256k1"
default-features = false
features = ["alloc", "recovery"]
